--- a/Src/Exchange.DkimSigner/Properties/Resources.resx
+++ b/Src/Exchange.DkimSigner/Properties/Resources.resx
@@ -112,19 +112,13 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DkimSigningRoutingAgent_SignFailed" xml:space="preserve">
     <value>Signing a mail item according to DKIM failed with an exception. Check the logged exception for details.</value>
-  </data>
-  <data name="CryptHelper_BadDerFormat" xml:space="preserve">
-    <value>The encoded key is not in the proper DER format.</value>
-  </data>
-  <data name="CryptHelper_BadPemFormat" xml:space="preserve">
-    <value>The encoded key is not in the proper PEM format.</value>
   </data>
   <data name="DkimSigningRoutingAgent_NoKey" xml:space="preserve">
     <value>The PEM-encoded RSA Private Key is not specified, so DKIM signing was skipped.</value>
@@ -132,28 +126,49 @@
   <data name="DkimSigningRoutingAgent_MimeBodyNotFound" xml:space="preserve">
     <value>The MIME body could not be located, so DKIM signing was skipped.</value>
   </data>
-  <data name="DkimSigningRoutingAgentFactory_BadAlgorithmConfig" xml:space="preserve">
+  <data name="DkimSigningRoutingAgentFactory_BadDkimAlgorithmConfig" xml:space="preserve">
     <value>The algorithm specified in the configuration file could not be parsed. Check the value of the 'DefaultDkimSigner_Algorithm' key under &lt;appSettings&gt;. Currently accepted values are 'RsaSha1' (recommended) and 'RsaSha256'.</value>
   </data>
-  <data name="DkimSigningRoutingAgentFactory_BadSelectorConfig" xml:space="preserve">
+  <data name="DkimSigningRoutingAgentFactory_BadDkimSelectorConfig" xml:space="preserve">
     <value>The selector was not found in the configuration file or is blank. Check the value of the 'DefaultDkimSigner_Selector' key under &lt;appSettings&gt;.</value>
   </data>
-  <data name="DkimSigningRoutingAgentFactory_BadDomainConfig" xml:space="preserve">
+  <data name="DkimSigningRoutingAgentFactory_BadDkimDomainConfig" xml:space="preserve">
     <value>The domain was not found in the configuration file or is blank. Check the value of the 'DefaultDkimSigner_Domain' key under the &lt;appSettings&gt; section.</value>
   </data>
-  <data name="DkimSigningRoutingAgentFactory_BadPrivateKeyConfig" xml:space="preserve">
+  <data name="DkimSigningRoutingAgentFactory_BadDkimPrivateKeyConfig" xml:space="preserve">
     <value>The PEM-encoded private RSA key was not found in the configuration file or is blank. Check the value of the 'DefaultDkimSigner_PrivateKey' key in the &lt;appSettings&gt; section.</value>
   </data>
-  <data name="DkimSigningRoutingAgentFactory_BadCanonicalizationBodyConfig" xml:space="preserve">
+  <data name="DkimSigningRoutingAgentFactory_BadDkimCanonicalizationBodyConfig" xml:space="preserve">
     <value>The  body canonicalization algorithm specified in the configuration file could not be parsed. Check the value of the 'DefaultDkimSigner_Algorithm' key under &amp;lt;appSettings&amp;gt;. Currently accepted values are 'Simple' (recommended) and 'Relaxed'.</value>
   </data>
-  <data name="DkimSigningRoutingAgentFactory_BadCanonicalizationHeaderConfig" xml:space="preserve">
+  <data name="DkimSigningRoutingAgentFactory_BadDkimCanonicalizationHeaderConfig" xml:space="preserve">
     <value>The  header canonicalization algorithm specified in the configuration file could not be parsed. Check the value of the 'DefaultDkimSigner_Algorithm' key under &amp;lt;appSettings&amp;gt;. Currently accepted values are 'Simple' (recommended) and 'Relaxed'.</value>
   </data>
-  <data name="CryptHelper_BadXmlFormat" xml:space="preserve">
+  <data name="RSACryptHelper_BadDerFormat" xml:space="preserve">
+    <value>The encoded key is not in the proper DER format.</value>
+  </data>
+  <data name="RSACryptHelper_BadPemFormat" xml:space="preserve">
+    <value>The encoded key is not in the proper PEM format.</value>
+  </data>
+  <data name="RSACryptHelper_BadXmlFormat" xml:space="preserve">
     <value>The encoded key is not in the proper XML format.</value>
   </data>
-  <data name="CryptHelper_UnknownFormat" xml:space="preserve">
+  <data name="RSACryptHelper_UnknownFormat" xml:space="preserve">
     <value>The encoded key is not in a proper format.</value>
+  </data>
+  <data name="MainWindows_BadDkimAlgorithmConfig" xml:space="preserve">
+    <value>Impossible to load the specified DKIM algorithm.</value>
+  </data>
+  <data name="MainWindows_BadDkimCanonicalizationBodyConfig" xml:space="preserve">
+    <value>Impossible to load the specified DKIM canonicalization body format. The "Simple" format has been selected.</value>
+  </data>
+  <data name="MainWindows_BadDkimCanonicalizationHeaderConfig" xml:space="preserve">
+    <value>Impossible to load the specified DKIM canonicalization header format. The "Simple" format has been selected.</value>
+  </data>
+  <data name="DkimSigningRoutingAgentFactory_BadLogLevel" xml:space="preserve">
+    <value>The log level is not defined or is invalid.</value>
+  </data>
+  <data name="DkimSigningRoutingAgentFactory_BadDkimConfig" xml:space="preserve">
+    <value>The configuration for Exchange Dkim Agent is not defined.</value>
   </data>
 </root>
