--- a/Src/Configuration.DkimSigner/MainWindow.resx
+++ b/Src/Configuration.DkimSigner/MainWindow.resx
@@ -2832,4 +2832,7 @@
         AADAAwAAwAMAAMADAADAAwAAwAMAAMADAADAAwAAwAcAAMAPAADAHwAA
 </value>
   </data>
+  <metadata name="timExchangeStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>593, 17</value>
+  </metadata>
 </root>
